behat-tests (templates, worflow)
